# LockBox

./: .gitignore  README.md  build-linux.sh  build-windows.ps1  install.ps1  install.sh  pyproject.toml
.github/workflows/: release-linux.yml  release-windows.yml
docs/: DOCS.md  README.md  SUMMARY.md  cli-reference.md  faq.md  getting-started.md  security.md  setup.md
extra/: check_env.py  handoff.md
src/lockbox/: __main__.py  cli.py  docs.py  generator.py  tui.py  vault.py
