[project]
name = "lockbox"
version = "0.1.0"
description = "LockBox - encrypted local password manager CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Packetverlust" }]
dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.1",
    "cryptography>=42.0.0",
    "argon2-cffi>=23.1.0",
    "pyperclip>=1.8.2",
    "textual>=0.60.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
]

[project.scripts]
lockbox = "lockbox.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
